# g3lobster

./: .gcloudignore  .gitignore  .legion-commander.md  Dockerfile  Makefile  README.md  clean.py  cloudbuild.yaml  config.cloudrun.yaml  config.yaml  config.yaml.example  fix_focusout.js  fix_input.js  patch.py  pyproject.toml  service.cloudrun.yaml
config/mcp/: cron.yaml  (+6 more)
deploy/: cloudrun.sh
docs/: architecture.mmd  cloud-run-deployment.md  gemini-cli-and-persona.md  google-chat-integration.md  heartbeat-and-cron.md  index.md  memory-architecture.md  morning-briefing.md  multi-agent-control.md  multi-space-support.md  sending-direct-messages.md  sitemap.md  task-board.md
g3lobster/: __init__.py  __main__.py  alerts.py  config.py  main.py  utils.py
scripts/: demo-seed.sh  seed_provenance.py
tests/: conftest.py  test_agent.py  test_alerts.py  test_api.py  test_auth.py  test_board.py  test_bridge_manager.py  test_briefing.py  test_calendar.py  test_calendar_bridge.py  test_calendar_focus.py  test_calendar_setup.py  test_chat.py  test_chat_events.py  test_compaction.py  test_consolidation.py  test_control_plane.py  test_cron.py  test_cron_management.py  test_cron_mcp_server.py  test_debounce.py  test_decisions.py  test_decisions_api.py  test_delegation_api.py  test_delegation_mcp.py  test_events.py  test_events_api.py  test_export.py  test_formatter.py  test_global_memory.py  test_handoff.py  test_incident.py  test_journal.py  test_mcp.py  test_meeting_prep.py  test_memory.py  test_memory_inspector.py  test_metrics.py  test_pool_manager.py  test_procedures.py  (+17 more)
(+127 files in other folders)
